Fixed spacing on images and spacer

--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,9 @@ h1, h2 {
 }
 
 #space{
-  border: 1px solid rebeccapurple;
+  border: 4px solid rebeccapurple;
   margin: 15px;
-  width: 90%;
+  width: 100%;
 }
 
 table {
@@ -30,6 +30,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin: 15px;
 }
 
 .footer {
